--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 - https://raw.githubusercontent.com/argoproj/argo-cd/master/manifests/ha/install.yaml
 - applications/sealed-secrets.yaml
 - applications/gokapi.yaml
+- sealed-secrets
 
 components:
 - https://github.com/argoproj-labs/argocd-extensions/manifests
