--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-argocd-redis.yaml
+- sealed-secrets/sealed-datadog-secret.yaml
 
 patches:
 - path: argocd/argocd-cmd-params-cm.yaml
