--- a/kubernetes/applications/datadog-agent.yaml
+++ b/kubernetes/applications/datadog-agent.yaml
@@ -7,6 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://helm.datadoghq.com
+    targetRevision: 3.*.*
     chart: datadog
     helm:
       values: |
