--- a/kubernetes/applications/datadog-agent.yaml
+++ b/kubernetes/applications/datadog-agent.yaml
@@ -25,7 +25,7 @@ spec:
             enabled: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: datadog
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
