--- a/kubernetes/applications/datadog-agent.yaml
+++ b/kubernetes/applications/datadog-agent.yaml
@@ -21,8 +21,14 @@ spec:
             enabled: true
           processAgent:
             enabled: true
-          systemProbe:
+          networkMonitoring:
             enabled: true
+          systemProbe:
+            enableTCPQueueLength: true
+            enableOOMKill: true
+          securityAgent:
+            runtime:
+              enabled: true
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
