--- a/kubernetes/applications/sealed-secrets.yaml
+++ b/kubernetes/applications/sealed-secrets.yaml
@@ -8,6 +8,7 @@ spec:
   source:
     repoURL: https://github.com/bitnami-labs/sealed-secrets
     path: helm/sealed-secrets
+    targetRevision: helm-v2.16.1
     helm:
       releaseName: sealed-secrets
   destination:
