--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,14 @@
   "extends": [
     "config:base"
   ],
+  "helm": {
+    "enabled": true,
+    "registries": [
+      {
+        "url": "https://helm.datadoghq.com"
+      }
+    ]
+  },
   "regexManagers": [
     {
       "fileMatch": ["kubernetes/kustomization.yaml"],
