--- a/renovate.json
+++ b/renovate.json
@@ -17,9 +17,10 @@
       "matchStrings": [
         "targetRevision: (?<currentValue>.*)"
       ],
-      "datasourceTemplate": "helm",
-      "depNameTemplate": "datadog",
-      "versioningTemplate": "semver"
+      "datasourceTemplate": "github-tags",
+      "depNameTemplate": "DataDog/helm-charts",
+      "versioningTemplate": "semver",
+      "extractVersionTemplate": "^datadog-v(?<version>\\d+\\.\\d+\\.\\d+)$"
     },
     {
       "fileMatch": ["kubernetes/applications/sealed-secrets.yaml"],
