--- a/kubernetes/applications/sealed-secrets.yaml
+++ b/kubernetes/applications/sealed-secrets.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/bitnami-labs/sealed-secrets
-    path: helm/sealed-secrets
-    targetRevision: helm-v2.16.0
+    repoURL: https://bitnami-labs.github.io/sealed-secrets
+    chart: sealed-secrets
+    targetRevision: 2.16.0
     helm:
       releaseName: sealed-secrets
   destination:
