--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -8,10 +8,10 @@ resources:
 - applications/sealed-secrets.yaml
 - applications/gokapi.yaml
 - applications/datadog-agent.yaml
-- sealed-secrets/sealed-argocd-secret.yaml
-- sealed-secrets/sealed-repo-2126746468.yaml
-- sealed-secrets/sealed-argocd-redis.yaml
-- sealed-secrets/sealed-datadog-secret.yaml
+# - sealed-secrets/sealed-argocd-secret.yaml
+# - sealed-secrets/sealed-repo-2126746468.yaml
+# - sealed-secrets/sealed-argocd-redis.yaml
+# - sealed-secrets/sealed-datadog-secret.yaml
 
 patches:
 - path: argocd/argocd-cmd-params-cm.yaml
