--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - applications/gokapi.yaml
 - applications/datadog-agent.yaml
 # - applications/homebridge.yaml
+- applications/dify.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-datadog-secret.yaml
