--- a/kubernetes/applications/dify.yaml
+++ b/kubernetes/applications/dify.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: dify
-  namespace: dify
+  namespace: argocd
 spec:
   destination:
     namespace: dify
