--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
 - applications/gokapi.yaml
 - applications/datadog-agent.yaml
 # - applications/homebridge.yaml
-#- applications/langfuse.yaml
+- applications/langfuse.yaml
 - applications/dify.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
