delete system probe

--- a/kubernetes/applications/datadog-agent.yaml
+++ b/kubernetes/applications/datadog-agent.yaml
@@ -23,6 +23,8 @@ spec:
             enabled: true
           networkMonitoring:
             enabled: true
+          systemProbe:
+            enabled: false
           securityAgent:
             runtime:
               enabled: true
