revert system probe

--- a/kubernetes/applications/datadog-agent.yaml
+++ b/kubernetes/applications/datadog-agent.yaml
@@ -24,7 +24,8 @@ spec:
           networkMonitoring:
             enabled: true
           systemProbe:
-            enabled: false
+            enableTCPQueueLength: true
+            enableOOMKill: true
           securityAgent:
             runtime:
               enabled: true
