Revert "temp remove gokapi"
This reverts commit ff1751c17e5366b4ec222b160efba5993209f96d.

--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: argocd
 resources:
 - https://raw.githubusercontent.com/argoproj/argo-cd/v2.13.2/manifests/install.yaml
 - applications/sealed-secrets.yaml
-# - applications/gokapi.yaml
+- applications/gokapi.yaml
 - applications/dify.yaml
 - applications/newrelic.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
