--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - applications/gokapi.yaml
 - applications/dify.yaml
 - applications/newrelic.yaml
+- applications/docuseal.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-datadog-secret.yaml
