--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
 - applications/dify.yaml
 - applications/newrelic.yaml
 - applications/docuseal.yaml
+- applications/signoz.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-datadog-secret.yaml
