--- a/kubernetes/applications/signoz.yaml
+++ b/kubernetes/applications/signoz.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     chart: signoz
     repoURL: https://charts.signoz.io
-    targetRevision: latest
+    targetRevision: 0.70.0
     helm:
       releaseName: andex-signoz
   destination:
