--- a/renovate.json
+++ b/renovate.json
@@ -13,14 +13,14 @@
       "versioningTemplate": "semver"
     },
     {
-      "fileMatch": ["kubernetes/applications/datadog-agent.yaml"],
+      "fileMatch": ["kubernetes/applications/signoz.yaml"],
       "matchStrings": [
         "targetRevision: (?<currentValue>.*)"
       ],
-      "datasourceTemplate": "github-tags",
-      "depNameTemplate": "DataDog/helm-charts",
+      "datasourceTemplate": "github-releases",
+      "depNameTemplate": "SigNoz/charts",
       "versioningTemplate": "semver",
-      "extractVersionTemplate": "^datadog-(?<version>\\d+\\.\\d+\\.\\d+)$"
+      "extractVersionTemplate": "^signoz-(?<version>\\d+\\.\\d+\\.\\d+)$"
     },
     {
       "fileMatch": ["kubernetes/applications/sealed-secrets.yaml"],
