--- a/kubernetes/applications/otel-operator.yaml
+++ b/kubernetes/applications/otel-operator.yaml
@@ -9,6 +9,11 @@ spec:
     chart: opentelemetry-operator
     repoURL: https://open-telemetry.github.io/opentelemetry-helm-charts
     targetRevision: 0.80.2
+    helm:
+      values: |
+        manager:
+          collectorImage:
+            repository: "otel/opentelemetry-collector-k8s"
   destination:
     server: https://kubernetes.default.svc
     namespace: opentelemetry-operator-system
