--- a/kubernetes/applications/signoz.yaml
+++ b/kubernetes/applications/signoz.yaml
@@ -15,6 +15,27 @@ spec:
           frontend:
             service:
               type: NodePort
+          otelCollector:
+            config:
+              receivers:
+                prometheus:
+                  config:
+                    global:
+                      scrape_interval: 60s
+                    scrape_configs:
+                      - job_name: argocd-metrics
+                        metrics_path: /metrics
+                        scheme: http
+                        kubernetes_sd_configs:
+                          - role: endpoints
+                            namespaces:
+                              names: [argocd]
+                        relabel_configs:
+                          - source_labels: [__meta_kubernetes_pod_container_name]
+                            action: keep
+                            regex: (argocd-metrics|argocd-server|argocd-repo-server)
+                          - source_labels: [__meta_kubernetes_pod_container_name]
+                            target_label: container_name
     - chart: k8s-infra
       targetRevision: 0.12.1
       repoURL: https://charts.signoz.io
