--- a/kubernetes/applications/signoz.yaml
+++ b/kubernetes/applications/signoz.yaml
@@ -16,6 +16,21 @@ spec:
             service:
               type: NodePort
           otelCollector:
+            serviceAccount:
+              create: true
+              annotations: {}
+            rbac:
+              create: true
+              rules:
+                - apiGroups: [""]
+                  resources:
+                    - services
+                    - endpoints
+                    - pods
+                  verbs:
+                    - get
+                    - list
+                    - watch
             config:
               service:
                 pipelines:
@@ -98,3 +113,32 @@ spec:
     automated:
       prune: true
       selfHeal: true
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: signoz-otel-collector-metrics-reader
+rules:
+  - apiGroups: [""]
+    resources:
+      - services
+      - endpoints
+      - pods
+    verbs:
+      - get
+      - list
+      - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: signoz-otel-collector-metrics-reader
+subjects:
+  - kind: ServiceAccount
+    name: andex-signoz-otel-collector
+    namespace: signoz
+roleRef:
+  kind: ClusterRole
+  name: signoz-otel-collector-metrics-reader
+  apiGroup: rbac.authorization.k8s.io
