--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
 - applications/signoz.yaml
 - applications/otel-operator.yaml
 - applications/cert-manager.yaml
+- applications/n8n.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-datadog-secret.yaml
