--- a/kubernetes/applications/chat.yaml
+++ b/kubernetes/applications/chat.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: webui
+    namespace: librechat
     server: https://kubernetes.default.svc
   project: default
   source:
