update destination namespace in chat.yaml from webui to librechat

--- a/kubernetes/applications/sealed-secrets.yaml
+++ b/kubernetes/applications/sealed-secrets.yaml
@@ -24,3 +24,31 @@ spec:
     kind: Service
     jsonPointers:
     - /spec/clusterIP
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: sealed-secrets-web
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://charts.bakito.net
+    chart: sealed-secrets-web
+    helm:
+      # Helm リリース名を指定
+      releaseName: sealed-secrets-web
+      values: |
+        sealedSecrets:
+          namespace: sealed-secrets
+          serviceName: sealed-secrets
+        service:
+          type: NodePort
+          nodePort: 32280
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: sealed-secret
+  syncPolicy:
+    automated:
+      prune: true
