update destination namespace in chat.yaml from webui to librechat

--- a/kubernetes/applications/sealed-secrets.yaml
+++ b/kubernetes/applications/sealed-secrets.yaml
@@ -36,6 +36,7 @@ spec:
   source:
     repoURL: https://charts.bakito.net
     chart: sealed-secrets-web
+    targetRevision: HEAD
     helm:
       # Helm リリース名を指定
       releaseName: sealed-secrets-web
