update targetRevision in sealed-secrets.yaml to 3.1.7

--- a/kubernetes/applications/sealed-secrets.yaml
+++ b/kubernetes/applications/sealed-secrets.yaml
@@ -36,9 +36,8 @@ spec:
   source:
     repoURL: https://charts.bakito.net
     chart: sealed-secrets-web
-    targetRevision: HEAD
+    targetRevision: 3.1.7
     helm:
-      # Helm リリース名を指定
       releaseName: sealed-secrets-web
       values: |
         sealedSecrets:
