--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -9,10 +9,10 @@ resources:
 - applications/gokapi.yaml
 - applications/dify.yaml
 - applications/docuseal.yaml
-- applications/signoz.yaml
-- applications/otel-operator.yaml
+#- applications/signoz.yaml
+#- applications/otel-operator.yaml
 - applications/cert-manager.yaml
-- applications/n8n.yaml
+#- applications/n8n.yaml
 - applications/chat.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
