update destination namespace in sealed-secrets.yaml from sealed-secret to sealed-secrets

--- a/kubernetes/applications/sealed-secrets.yaml
+++ b/kubernetes/applications/sealed-secrets.yaml
@@ -48,7 +48,7 @@ spec:
           nodePort: 32280
   destination:
     server: https://kubernetes.default.svc
-    namespace: sealed-secret
+    namespace: sealed-secrets
   syncPolicy:
     automated:
       prune: true
