rename application from open-webui to andex-lobechat and update destination namespace to lobechat

--- a/kubernetes/applications/chat.yaml
+++ b/kubernetes/applications/chat.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: open-webui
+  name: andex-lobechat
   namespace: argocd
 spec:
   destination:
-    namespace: librechat
+    namespace: lobechat
     server: https://kubernetes.default.svc
   project: default
   source:
