--- a/kubernetes/applications/chat.yaml
+++ b/kubernetes/applications/chat.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: andex-anythingllm
+  name: andex-webui
   namespace: argocd
 spec:
   destination:
-    namespace: anythingllm
+    namespace: webui
     server: https://kubernetes.default.svc
   project: default
   source:
