Replace nuclio application configuration with openfaas in kustomization.yaml and add openfaas application manifest

--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
 - applications/cert-manager.yaml
 #- applications/n8n.yaml
 - applications/chat.yaml
-- applications/nuclio.yaml
+- applications/openfaas.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-datadog-secret.yaml
