--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -14,11 +14,11 @@ resources:
 - applications/cert-manager.yaml
 #- applications/n8n.yaml
 - applications/chat.yaml
-- applications/openfaas.yaml
+#- applications/openfaas.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-datadog-secret.yaml
-
+- applications/codimd.yaml
 patches:
 - path: argocd/argocd-cmd-params-cm.yaml
 - path: argocd/argocd-nodeport.yaml
