Rename CodiMD application to Obsidian Sync in kustomization.yaml and update repository URL

--- a/kubernetes/applications/obsidian-sync.yaml
+++ b/kubernetes/applications/obsidian-sync.yaml
@@ -1,19 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: codimd
+  name: obsidian-sync
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: https://github.com/andex-tokyo/andex-codimd.git
+    repoURL: https://github.com/andex-tokyo/andex-obsidian-sync.git
     path: kubernetes
     targetRevision: HEAD
     directory:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: codimd
+    namespace: obsidian-sync
   syncPolicy:
     automated:
       prune: true
