--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -8,12 +8,9 @@ resources:
 - applications/sealed-secrets.yaml
 - applications/dify.yaml
 - applications/docuseal.yaml
-#- applications/signoz.yaml
-#- applications/otel-operator.yaml
 - applications/cert-manager.yaml
-#- applications/n8n.yaml
+- applications/n8n.yaml
 - applications/chat.yaml
-#- applications/openfaas.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-datadog-secret.yaml
