--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - applications/cert-manager.yaml
 - applications/n8n.yaml
 - applications/chat.yaml
+- applications/kube-prometheus-stack.yaml
 - sealed-secrets/sealed-argocd-secret.yaml
 - sealed-secrets/sealed-repo-2126746468.yaml
 - sealed-secrets/sealed-datadog-secret.yaml
