Add kustomize build options for kube-prometheus-stack application

--- a/kubernetes/applications/kube-prometheus-stack.yaml
+++ b/kubernetes/applications/kube-prometheus-stack.yaml
@@ -12,6 +12,8 @@ spec:
     path: kubernetes
     repoURL: https://github.com/andex-tokyo/andex-kube-prometheus.git
     targetRevision: HEAD
+    kustomize:
+      buildOptions: --enable-helm
   syncPolicy:
     automated:
       prune: true
