--- a/kubernetes/applications/rize-dashboard.yaml
+++ b/kubernetes/applications/rize-dashboard.yaml
@@ -5,7 +5,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rize
+  name: rize-dashboard
   namespace: argocd
 spec:
   destination:
