--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -15,7 +15,7 @@ resources:
   - sealed-secrets/sealed-argocd-secret.yaml
   - sealed-secrets/github-andex-tokyo-creds.yaml
   - applications/obsidian-sync.yaml
-  - applications/rize.yaml
+  - applications/rize-dashboard.yaml
 patches:
   - path: argocd/argocd-cmd-params-cm.yaml
   - path: argocd/argocd-nodeport.yaml
