--- a/kubernetes/applications/rize-dashboard.yaml
+++ b/kubernetes/applications/rize-dashboard.yaml
@@ -7,6 +7,11 @@ kind: Application
 metadata:
   name: rize-dashboard
   namespace: argocd
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: app=ghcr.io/andex-tokyo/rize-dashboard, worker=ghcr.io/andex-tokyo/rize-dashboard-worker
+    argocd-image-updater.argoproj.io/app.update-strategy: newest-build
+    argocd-image-updater.argoproj.io/worker.update-strategy: newest-build
+    argocd-image-updater.argoproj.io/write-back-method: argocd
 spec:
   destination:
     namespace: rize
