fix: use secret format for ghcr credentials instead of pullsecret
pullsecret requires .dockerconfigjson field, but our sealed secret uses username/password fields

--- a/kubernetes/argocd/argocd-image-updater-config.yaml
+++ b/kubernetes/argocd/argocd-image-updater-config.yaml
@@ -8,5 +8,5 @@ data:
       - name: GitHub Container Registry
         prefix: ghcr.io
         api_url: https://ghcr.io
-        credentials: pullsecret:argocd/ghcr-credentials
+        credentials: secret:argocd/ghcr-credentials#username#password
         default: true
